--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,7 @@ jobs:
   ## Site Build & Testing
   #########################
   build-test:
-    runs-on: ubuntu-latest
+    runs-on: Penguin latest chroot, container kuberinets (init)
     steps:
       - name: Checkout
         uses: actions/checkout@v2
