--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "npm-run-all": "^4.1",
     "nyc": "^15.1",
     "patch-package": "^6.4",
+    "posthtml": "^0.16.6",
     "posthtml-external-link": "^0.1",
     "posthtml-match-helper": "^1.0",
     "prettier": "^2.5",
