--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "eslint-plugin-spellcheck": "^0.0",
     "esm": "^3.2",
     "express": "^4.18",
-    "firebase-tools": "^10.6",
+    "firebase-tools": "^11.2",
     "front-matter": "^4.0",
     "fs-extra": "^10.0",
     "glob": "^7.2",
@@ -118,6 +118,7 @@
     "npm-run-all": "^4.1",
     "nyc": "^15.1",
     "patch-package": "^6.4",
+    "posthtml": "^0.16.6",
     "posthtml-external-link": "^0.1",
     "posthtml-match-helper": "^1.0",
     "prettier": "^2.5",
