--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,38 +11,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - name: Setup PNPM
+      - uses: pnpm/action-setup@v2
         with:
-          node-version: 14
-      - name: Examine Node
-        run: |
-          node -v
-          npm -v
-      - name: Determine Lockfile
-        id: lockfile
-        run: |
-          if [[ -f "package-lock.json" || -f "npm-shrinkwrap.json" ]]; then
-            echo "::set-output name=exists::true"
-          else
-            echo "::set-output name=exists::false"
-          fi
-      - name: Install - Lockfile
-        if: steps.lockfile.outputs.exists == 'true'
-        run: |
-          npm ci --no-optional
-      - name: Install - No Lockfile
-        if: steps.lockfile.outputs.exists == 'false'
-        run: |
-          npm install
+          version: 7
       - name: Install CLI dependencies
         run: |
           sudo apt-get update
           sudo apt-get install giflib-tools webp ffmpeg
+      - name: Install project dependencies
+        run: |
+          pnpm install
       - name: Build and Test
         run: |
-          npm run build --if-present
-          npm test
+          pnpm run build
+          pnpm test
         env:
           CI: true
       - name: Upload built state
