Installing directly much faster than artifact ul/dl

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -58,16 +58,6 @@ jobs:
         with:
           name: indexes
           path: functions/indexes
-      - name: Install functions dependencies
-        if: github.ref == 'refs/heads/main'
-        run: |
-          npm ci --prefix functions
-      - name: Upload functions dependencies
-        uses: actions/upload-artifact@v1
-        if: github.ref == 'refs/heads/main'
-        with:
-          name: functions-deps
-          path: functions/node_modules
 
   #########################
   ## Preview Deploy
@@ -111,11 +101,14 @@ jobs:
         with:
           name: indexes
           path: functions/indexes
-      - name: Download functions dependencies
-        uses: actions/download-artifact@v1
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          name: functions-deps
-          path: functions/node_modules
+          node-version: 14
+      - name: Install functions dependencies
+        if: github.ref == 'refs/heads/main'
+        run: |
+          npm ci --prefix functions
       - name: Deploy Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
