--- a/cms/package.json
+++ b/cms/package.json
@@ -25,6 +25,8 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/code-input": "^3.0.1",
+    "@sanity/table": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
