--- a/astro/package.json
+++ b/astro/package.json
@@ -8,7 +8,17 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prepare": "cd ../ && husky install ./astro/.husky",
+    "lint": "run-p *:lint",
+    "lint:staged": "lint-staged",
+    "fix": "run-p *:fix",
+    "js:lint": "eslint --quiet .",
+    "js:fix": "eslint --fix .",
+    "prettier:lint": "prettier --plugin-search-dir=. -c .",
+    "prettier:fix": "prettier --plugin-search-dir=. --write .",
+    "css:lint": "stylelint \"**/*.{css,scss,astro}\"",
+    "css:fix": "stylelint --fix \"**/*.{css,scss,astro}\""
   },
   "dependencies": {
     "@astrojs/mdx": "^0.14.0",
@@ -18,12 +28,45 @@
     "@sanity/client": "^3.4.1",
     "astro": "^1.9.1",
     "dotenv": "^16.0.3",
-    "starchart-studio": "^0.2.1",
+    "starchart-studio": "^0.3.0",
     "svelte": "^3.55.0",
     "vite-plugin-pwa": "^0.14.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
-    "sass": "^1.57.1"
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "breakpoint-sass": "^3.0.0",
+    "eslint": "^8.31.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-astro": "^0.21.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-html": "^1.5.0",
+    "prettier": "^2.8.2",
+    "prettier-plugin-astro": "^0.7.2",
+    "prettier-plugin-svelte": "^2.9.0",
+    "sass": "^1.57.1",
+    "sass-toolkit": "^2.10.2",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-standard": "^29.0.0"
+  },
+  "engines": {
+    "node": ">=18.12.0"
+  },
+  "lint-staged": {
+    "**/*.{svelte,astro}": "stylelint",
+    "**/*.{js,mjs,cjs,ts,astro,svelte}": "eslint -c .eslintrc.yml",
+    "**/*": "prettier --plugin-search-dir=. -c"
   }
 }
