--- a/astro/package.json
+++ b/astro/package.json
@@ -29,7 +29,7 @@
     "astro": "^2.0.0",
     "dotenv": "^16.0.3",
     "starchart-studio": "^0.4.0",
-    "svelte": "npm:@typhonjs-svelte/svelte@3.55.1-cq",
+    "svelte": "npm:@typhonjs-svelte/svelte@3.55.1-cq2",
     "vite-plugin-pwa": "^0.14.1"
   },
   "devDependencies": {
