Migrate redirects to script to build them out

--- a/firebase.json
+++ b/firebase.json
@@ -12,13 +12,7 @@
         "dynamicLinks": true
       }
     ],
-    "redirects": [
-      {
-        "source": "/",
-        "destination": "/en",
-        "type": 301
-      }
-    ],
+    "redirects": [],
     "public": "public",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**", "src/**", "tests/**", "lib/**", "gulpfile.js", "rollup.*.config.js", "rollup.sw.js", "babel.config.js", "package*.json", "package-lock.json", "lighthouse.config.json"]
   }
