--- a/astro/package.json
+++ b/astro/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "breakpoint-sass": "^3.0.0",
+    "chromeos-dev-markdown": "^1.0.1",
     "eslint": "^8.31.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.6.0",
@@ -49,8 +50,11 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
+    "node-fetch": "^3.3.1",
     "npm-run-all": "^4.1.5",
     "postcss-html": "^1.5.0",
+    "posthtml": "^0.16.6",
+    "posthtml-match-helper": "^1.0.3",
     "prettier": "^2.8.2",
     "prettier-plugin-astro": "^0.7.2",
     "prettier-plugin-svelte": "^2.9.0",
@@ -59,7 +63,8 @@
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-recommended": "^9.0.0",
-    "stylelint-config-standard": "^29.0.0"
+    "stylelint-config-standard": "^29.0.0",
+    "uslug": "^1.0.4"
   },
   "engines": {
     "node": ">=18.12.0"
