--- a/astro/package.json
+++ b/astro/package.json
@@ -33,6 +33,7 @@
     "vite-plugin-pwa": "^0.14.1"
   },
   "devDependencies": {
+    "@rollup/plugin-yaml": "^4.0.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
@@ -50,8 +51,9 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
-    "node-fetch": "^3.3.1",
+    "markdown-toc": "^1.2.0",
     "nanoid": "^4.0.1",
+    "node-fetch": "^3.3.1",
     "npm-run-all": "^4.1.5",
     "postcss-html": "^1.5.0",
     "posthtml": "^0.16.6",
