--- a/astro/package.json
+++ b/astro/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
+    "glob": "^9.3.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "markdown-toc": "^1.2.0",
@@ -67,7 +68,8 @@
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-standard": "^29.0.0",
-    "uslug": "^1.0.4"
+    "uslug": "^1.0.4",
+    "yaml": "^2.2.1"
   },
   "lint-staged": {
     "**/*.{svelte,astro}": "stylelint",
