Add Search generators

--- a/astro/package.json
+++ b/astro/package.json
@@ -28,6 +28,7 @@
     "@sanity/client": "^3.4.1",
     "astro": "^2.0.0",
     "dotenv": "^16.0.3",
+    "lunr": "^2.3.9",
     "starchart-studio": "^0.4.0",
     "svelte": "npm:@typhonjs-svelte/svelte@3.55.1-cq2",
     "vite-plugin-pwa": "^0.14.1"
@@ -49,8 +50,11 @@
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
+    "front-matter": "^4.0.2",
+    "fs-extra": "^11.1.1",
     "glob": "^9.3.2",
     "husky": "^8.0.3",
+    "iso-639-1": "^2.1.15",
     "lint-staged": "^13.1.0",
     "markdown-toc": "^1.2.0",
     "nanoid": "^4.0.1",
