Add script to build and deploy a preview channel

--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   "scripts": {
     "ava": "ava",
     "build": "cross-env NODE_ENV=production run-p *:build",
+    "preview": "run-s build firebase:deploy:preview",
     "css:fix": "stylelint --fix 'site/sass/**/*.scss'",
     "css:lint": "stylelint 'site/sass/**/*.scss'",
     "dev": "run-p *:watch",
     "firebase:functions:log": "firebase functions:log",
     "firebase:functions:shell": "firebase functions:shell",
     "firebase:watch": "firebase serve --only functions --port=5010",
+    "firebase:deploy:preview": "firebase hosting:channel:deploy ${npm_config_channel} --expires 7d",
     "firebase": "firebase",
     "fix": "cross-env NODE_ENV=production run-p *:fix",
     "js:fix": "eslint --fix functions site lib vite.config.js ava.config.cjs",
