--- a/astro/package.json
+++ b/astro/package.json
@@ -26,12 +26,12 @@
     "@astrojs/svelte": "^2.2.0",
     "@portabletext/svelte": "^1.0.1",
     "@sanity/client": "^3.4.1",
-    "astro": "^2.5.0",
+    "astro": "^2.5.2",
     "dotenv": "^16.0.3",
     "lunr": "^2.3.9",
     "starchart-studio": "^0.4.0",
-    "svelte": "npm:@typhonjs-svelte/svelte@3.55.1-cq2",
-    "vite-plugin-pwa": "^0.14.1"
+    "svelte": "^3.59.1",
+    "vite-plugin-pwa": "^0.15.0"
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.0.1",
@@ -63,10 +63,10 @@
     "postcss-html": "^1.5.0",
     "posthtml": "^0.16.6",
     "posthtml-match-helper": "^1.0.3",
-    "prettier": "^2.8.2",
-    "prettier-plugin-astro": "^0.7.2",
-    "prettier-plugin-svelte": "^2.9.0",
-    "sass": "^1.58.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.9.0",
+    "prettier-plugin-svelte": "^2.10.0",
+    "sass": "^1.62.1",
     "sass-toolkit": "^2.10.2",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.4",
