Add post/story layout and post page generation
Adds Author, Authors, YouTube, and Published components, updates Story Hero component, adds Authors lookup

--- a/astro/src/microcopy/en/microcopy.yml
+++ b/astro/src/microcopy/en/microcopy.yml
@@ -6,6 +6,7 @@ posted: Written by
 datePosted: Date posted
 more: Read more
 recommended: Recommended
+loadVideo: Load video
 actions:
   add: Add
   remove: Remove
