--- a/astro/package.json
+++ b/astro/package.json
@@ -19,7 +19,8 @@
     "prettier:fix": "prettier --plugin-search-dir=. --write .",
     "css:lint": "stylelint \"**/*.{css,scss,astro}\"",
     "css:fix": "stylelint --fix \"**/*.{css,scss,astro}\"",
-    "firebase": "firebase"
+    "firebase": "firebase",
+    "firebase:deploy": "firebase hosting:channel:deploy"
   },
   "dependencies": {
     "@astrojs/mdx": "^0.19.0",
@@ -52,7 +53,7 @@
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
-    "firebase-tools": "github:firebase/firebase-tools#jamesdaniels_astroHybridSupport",
+    "firebase-tools": "^12.3.0",
     "front-matter": "^4.0.2",
     "fs-extra": "^11.1.1",
     "glob": "^9.3.2",
@@ -85,10 +86,10 @@
   },
   "engines": {
     "node": ">=18.16.0",
-    "pnpm": ">=8.5.1"
+    "pnpm": ">=8.6.0"
   },
   "volta": {
     "node": "18.16.0",
-    "pnpm": "8.5.1"
+    "pnpm": "8.6.0"
   }
 }
