--- a/astro/package.json
+++ b/astro/package.json
@@ -20,6 +20,7 @@
     "css:lint": "stylelint \"**/*.{css,scss,astro}\"",
     "css:fix": "stylelint --fix \"**/*.{css,scss,astro}\"",
     "firebase": "firebase",
+    "firebase:emulate": "firebase emulators:start",
     "firebase:deploy": "firebase hosting:channel:deploy"
   },
   "dependencies": {
@@ -53,7 +54,7 @@
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
-    "firebase-tools": "^12.3.0",
+    "firebase-tools": "^12.3.1",
     "front-matter": "^4.0.2",
     "fs-extra": "^11.1.1",
     "glob": "^9.3.2",
