--- a/astro/package.json
+++ b/astro/package.json
@@ -32,6 +32,7 @@
     "@sanity/client": "^3.4.1",
     "astro": "^2.5.2",
     "dotenv": "^16.0.3",
+    "i18n-iso-countries": "^7.6.0",
     "lunr": "^2.3.9",
     "starchart-studio": "^0.4.0",
     "svelte": "^3.59.1",
